# spatial-join

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md  polys10k.wkt  polys1k.wkt  release.toml
.github/workflows/: audit.yml  bench.yaml  build.yml
benches/: spatial_join.rs
dev/bench/: data.js
proptest-regressions/: lib.txt  proptests.txt
src/: conv.rs  gen.py  gen2.py  gen_test.py  index.rs  lib.rs  naive.rs  proptests.rs  relates.rs  relates_impl.rs  rtrees.rs  structs.rs  validation.rs
