[package]
name = "spatial-join"
version = "0.1.6-alpha.0"
authors = ["Michael Salib <msalib@alum.mit.edu>"]
repository = "https://github.com/msalib/spatial-join"
edition = "2018"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/spatial-join/"
readme = "README.md"
keywords = ["gis", "geo", "geography", "geospatial", "spatial-join"]
description = "Spatial join tools"

[dependencies]
geo = "0.14.0"
rstar = "^0.7"
thiserror = "^1"
smallvec = "^1.4"
lazy_static = "^1.4"
rayon = { version = "^1", optional = true }
num_cpus = { version = "^1", optional = true }


[features]
default = ["parallel"]
parallel = ["rayon", "num_cpus"]

[dev-dependencies]
proptest = "^0.10.0"
pretty_assertions = "^0.6"
criterion = "^0.3"
approx = "^0.3"
wkt = "0.8.0"
geos = "5.0.0"
rand = "^0.7"

# I don't know what this does, but it is necessary to get cargo build -- --output-mode=X working
[lib]
bench = false

[[bench]]
harness = false
name = "spatial_join"
